<resources>
    <string name="app_name">Tennis Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tvTennisTracker" translatable="false">Tennis Tracker</string>
    <string name="cdTennisBackground" translatable="false">Tennis Background</string>
    <string name="txtCreateMatch">Nouveau Match</string>
    <string name="txtHistorique">Historique</string>
    <string name="historiqueTxt">Historique</string>
    <string name="nouveau_matchTxt">Nouveau Match</string>
    <string name="iconplayer" translatable="false">IconPlayer</string>
    <string name="nom_du_joueur1">Nom du Joueur1</string>
    <string name="nom_du_joueur2">Nom du Joueur2</string>
    <string name="demarrerTxt">Démarrer</string>
    <string name="retour">Retour</string>
    <string name="nameJoueur1">Joueur 1</string>
    <string name="nameJoueur2">Joueur 2</string>
    <string name="premier_joueur_servir">Premier joueur à servir :</string>
    <string name="joueur_1">Joueur 1</string>
    <string name="joueur_2">Joueur 2</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="premiereOK">1ère OK</string>
    <string name="deuxiemeOK">2ème OK</string>
    <string name="doubleFaute">Double Faute</string>
    <string name="ace1">Ace</string>
    <string name="ace2">Ace</string>
    <string name="scoreJ1">Score J1</string>
    <string name="scoreJ2">Score J2</string>
    <string name="pointGagnantJ1">Point Gagnant</string>
    <string name="pointGagnantJ2">Point Gagnant</string>
    <string name="fauteProvoquéeJ1">Faute Provoquée</string>
    <string name="fauteProvoquéeJ2">Faute Provoquée</string>
    <string name="fauteDirecteJ1">Faute Directe</string>
    <string name="fauteDirecteJ2">Faute Directe</string>
    <string name="score">Score</string>
    <string name="serveur_joueur_x">Serveur : Joueur X</string>
    <string name="Echange">Echange</string>
    <string name="enregistrer_et_quitter">Enregistrer et quitter</string>
    <string name="recuperer_position">Recuperer position</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="historique">Historique</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="voir_historique">Voir historique</string>
    <string name="supprimer_historique">Supprimer historique</string>
</resources>