<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:contentDescription="@string/cdTennisBackground"
        android:scaleType="fitXY"
        android:src="@drawable/tennis" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/mainMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/tvTennisTracker"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:textStyle="bold"
            android:layout_weight="70"
            />

        <Button
            android:id="@+id/btnNvMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/nouveau_matchTxt"
            android:textSize="24sp"
            app:backgroundTint="#AE222222" />

        <Button
            android:id="@+id/btnHistorique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/historiqueTxt"
            android:textSize="24sp"
            app:backgroundTint="#AE222222" />

    </LinearLayout>

</FrameLayout>